# Gifted_Hearts

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  docker-compose.yaml  docker-compose_develop.yaml  docker-compose_main.yaml  launch.py  pyproject.toml
command/: admin.py  apps.py  models.py  paginations.py  serializers.py  views.py
command/migrations/: 0001_initial.py
company/: admin.py  apps.py  models.py  paginations.py  serializers.py  views.py
company/migrations/: 0001_initial.py
core/: celery.py  settings.py  tasks.py  urls.py
core/settings_/: settings.py
documents/: admin.py  apps.py  models.py  serializers.py  views.py
documents/migrations/: 0001_initial.py
event/: admin.py  apps.py  filters.py  models.py  paginations.py  serializers.py  views.py
event/migrations/: 0001_initial.py  0002_alter_photoeventmodel_id_event.py
feedback/: admin.py  apps.py  models.py  paginations.py  serializers.py  views.py
feedback/migrations/: 0001_initial.py
forms_api/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
forms_api/migrations/: 0001_initial.py  0002_auto_20230222_1810.py  0003_feedbacksuggestion_photo.py  (+3 more)
friends/: admin.py  apps.py  models.py  paginations.py  serializers.py  views.py
help_translation/: admin.py  apps.py  models.py  serializers.py  views.py
news/: admin.py  apps.py  models.py  paginations.py  serializers.py  views.py
nginx/: default.conf
projects/: admin.py  apps.py  models.py  paginations.py  serializers.py  views.py
recaptcha/: serializers.py  views.py
utils/: mixins.py  paginations.py
(+5 files in other folders)
